# openplugin

./: .buildinfo  .gitignore  CNAME  Dockerfile  Dockerfile.lambda  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  openapi.json  pyproject.toml  search.html  searchindex.js  stainless.yaml  start_api_server.py
.doctrees/: environment.pickle  index.doctree
.doctrees/_notebooks/: advanced_demo.doctree  module_demo.doctree  openplugin_manifests_klarna.doctree  processor_demo.doctree  select_a_plugin_demo.doctree  simple_demo.doctree  user_auth_demo.doctree
.doctrees/build_plugins/: getting_started.doctree  index.doctree  openplugin_manifest.doctree  openplugin_manifest_repository.doctree  operation_signature_builder.doctree  using_the_openapi_document.doctree
.doctrees/call_plugins/: about_openplugin_sdk.doctree  getting_started.doctree  index.doctree
.doctrees/find_plugins/: index.doctree
.doctrees/getting_started/: index.doctree
.doctrees/host_plugins/: getting_started.doctree  index.doctree  plugin_selector_api.doctree  run_plugin_api.doctree
.doctrees/plugin_developers/: index.doctree  openplugin_manifest.doctree  using_the_openapi_document.doctree
.doctrees/plugin_platform_providers/: api_signature_selector_api.doctree  index.doctree  installation.doctree  operation_execution_api.doctree  plugin_selector_api.doctree
.doctrees/references/: architecture.doctree  design_decisions.doctree  extension_descriptions.doctree  index.doctree  openplugin_manifest.doctree  terminologies.doctree
.doctrees/run_openplugin_server/: getting_started.doctree  index.doctree  plugin_selector_api.doctree  run_plugin_api.doctree
_notebooks/: advanced_demo.html  module_demo.html  openplugin_manifests_klarna.html  processor_demo.html  select_a_plugin_demo.html  select_a_plugin_demo.ipynb  simple_demo.html  user_auth_demo.html
_sources/: index.rst
_static/: documentation_options.js  openapi.json  sample_env.env
api/: __init__.py  imprompt.py  langchain.py
build_plugins/: getting_started.html  index.html  openplugin_manifest.html  openplugin_manifest_repository.html  operation_signature_builder.html  using_the_openapi_document.html
call_plugins/: about_openplugin_sdk.html  getting_started.html  index.html
docs/: index.md  openapi.json  sample_env.env
examples/: sample_klarna.json
find_plugins/: index.html
getting_started/: index.html
host_plugins/: getting_started.html  index.html  plugin_selector_api.html  run_plugin_api.html
interfaces/: plugin_selector.py
manifests/: sample_klarna.json
openplugin/: __init__.py  __main__.py  main.py  settings.py
plugin_developers/: index.html  openplugin_manifest.html  using_the_openapi_document.html
plugin_platform_providers/: api_signature_selector_api.html  index.html  installation.html  operation_execution_api.html  plugin_selector_api.html
references/: architecture.html  design_decisions.html  extension_descriptions.html  index.html  openplugin_manifest.html  terminologies.html
run_openplugin_server/: getting_started.html  index.html  plugin_selector_api.html  run_plugin_api.html
scripts/: generate_plugin_test_data.py  lambda_handler.py  migrate_openplugin_manifest.py
tests/: conftest.py
(+270 files in other folders)
