[tool.poetry]
name = "openplugin"
version = "0.0.15"
description = ""
authors = ["shrikant <shrikant.pm14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.178"
requests = "2.29.0"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"
load-dotenv = "^0.1.0"
openai = "^0.27.7"
pydantic = "^1.0.0"
typer = { extras = ["all"], version = "^0.9.0" }


[tool.poetry.group.docs.dependencies]
nbsphinx = "^0.9.2"
sphinx-autobuild = "^2021.3.14"
sphinx = "6.2.1"
sphinx-book-theme = "^1.0.1"
toml = "^0.10.2"
sphinx-copybutton = "^0.5.2"
sphinx-tabs = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
openplugin = "openplugin.main:app"
